--- a/manuscript/SI.ipynb
+++ b/manuscript/SI.ipynb
@@ -5,14 +5,10 @@
    "id": "9394e745",
    "metadata": {},
    "source": [
-    "# Supplemental Information Tables + Figures "
+    "# Supplemental Information Tables + Figures \n",
+    "\n",
+    "STUB! - Coming Soon :) "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "310865cc",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -687,9 +683,9 @@
        "      <th>8</th>\n",
        "      <td>-1</td>\n",
        "      <td>Unclustered</td>\n",
-       "      <td>8.3.14.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>50.00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -698,16 +694,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   Group                               Name Number of Plants  \\\n",
-       "0      0                  Fuel Blend Plants               39   \n",
-       "1      1  Retrofitted but Vulnerable Plants                3   \n",
-       "2      2         Democratic Majority Plants               14   \n",
-       "3      3          High Health Impact Plants               29   \n",
-       "4      4                   Expensive Plants               74   \n",
-       "5      5                       Young Plants               11   \n",
-       "6      6        Plants in Anti-Coal Regions               14   \n",
-       "7      7              Air Quality Offenders                6   \n",
-       "8     -1                        Unclustered        8.3.14.50   \n",
+       "   Group                               Name  Number of Plants  \\\n",
+       "0      0                  Fuel Blend Plants                39   \n",
+       "1      1  Retrofitted but Vulnerable Plants                 3   \n",
+       "2      2         Democratic Majority Plants                14   \n",
+       "3      3          High Health Impact Plants                29   \n",
+       "4      4                   Expensive Plants                74   \n",
+       "5      5                       Young Plants                11   \n",
+       "6      6        Plants in Anti-Coal Regions                14   \n",
+       "7      7              Air Quality Offenders                 6   \n",
+       "8     -1                        Unclustered                 8   \n",
        "\n",
        "   Percent of Capacity  Percent with Planned Retirement  \\\n",
        "0                17.05                            45.30   \n",
@@ -718,7 +714,7 @@
        "5                 4.12                             0.00   \n",
        "6                 5.79                            67.10   \n",
        "7                 2.91                             0.00   \n",
-       "8                  NaN                              NaN   \n",
+       "8                 3.14                            50.00   \n",
        "\n",
        "                                     Vulnerabilities  \\\n",
        "0  Most plants burn alternative fuels, including ...   \n",
