--- a/tutorials/using_retire.ipynb
+++ b/tutorials/using_retire.ipynb
@@ -1,5 +1,22 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "c8ddda3b",
+   "metadata": {},
+   "source": [
+    "# Using Retire \n",
+    "\n",
+    "Stub! - Coming Soon :) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c3cd536",
+   "metadata": {},
+   "source": []
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
