--- a/tutorials/using_thema.ipynb
+++ b/tutorials/using_thema.ipynb
@@ -5,14 +5,10 @@
    "id": "0eb15af8",
    "metadata": {},
    "source": [
-    "# Using Thema"
+    "# Using Thema\n",
+    "\n",
+    "Stub! - Coming Soon :) "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6db5477d",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
